delete image folder

--- a/CT_Skill_Test.html
+++ b/CT_Skill_Test.html
@@ -35,7 +35,7 @@
       <nav class="navbar navbar-expand-md ">
         <div class="container ">
           <a href="#" class="navbar-brand ms-md-5"><img style="width: 65px;"
-              src="images/st_small_507x507-pad_600x600_f8f8f8-removebg-preview-removebg-preview.png" alt=""></a>
+              src="https://i.postimg.cc/0Qr73Jxw/st-small-507x507-pad-600x600-f8f8f8-removebg-preview-removebg-preview.png" alt=""></a>
 
           <button class="navbar-toggler border-0 shadow-none" data-bs-toggle="collapse" data-bs-target="#nav"
             aria-controls="nav" aria-label="Expand navigation">
@@ -68,7 +68,7 @@
   <section>
     <div class="container  d-flex justify-content-between align-items-center">
       <div class="ms-md-5 mt-3 mb-3 ">
-        <img class="f-img ms-md-2 " src="images/Your_paragraph_text-removebg-preview-resize.png" alt="" style="width: 160px;">
+        <img class="f-img ms-md-2 " src="https://i.postimg.cc/g0zVVTT4/Your-paragraph-text-removebg-preview-resize.png" alt="" style="width: 160px;">
       </div>
       <div class="me-md-5  d-flex justify-content-center align-items-center">
         <p>
@@ -126,22 +126,22 @@
             </div>
             <div class="carousel-inner pt-5 pb-5">
               <div class="carousel-item active text-center " data-bs-interval="10000">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
               </div>
               <div class="carousel-item text-center" data-bs-interval="2000">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
               </div>
               <div class="carousel-item text-center">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
-                <img src="images/istockphoto-1301431065-1024x1024-transformed.jpeg" class="c-img " alt="...">
-                <img src="images/images (14).jpeg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -231,7 +231,7 @@
       <div class="" style=" height: auto; background-color: #414F6B;">
         <div class="container d-flex align-items-center justify-content-between">
           <div class="ms-md-5 mt-2 mb-2">
-            <img src="images/Untitled_design__1_-removebg-preview.resize.png" alt="" class="f-img" style="width: 160px;">
+            <img src="https://i.postimg.cc/qvXcCTjz/Untitled-design-1-removebg-preview-resize.png" alt="" class="f-img" style="width: 160px;">
           </div>
           <div class="me-md-5">
             <p class="copyright"
