--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav class="navbar navbar-expand-md ">
         <div class="container ">
           <a href="#" class="navbar-brand ms-md-5"><img style="width: 65px;"
-              src="https://i.postimg.cc/0Qr73Jxw/st-small-507x507-pad-600x600-f8f8f8-removebg-preview-removebg-preview.png" alt=""></a>
+              src="https://i.postimg.cc/DyRwyt1H/Vector-Smart-Object.png" alt=""></a>
 
           <button class="navbar-toggler border-0 shadow-none" data-bs-toggle="collapse" data-bs-target="#nav"
             aria-controls="nav" aria-label="Expand navigation">
@@ -68,7 +68,7 @@
   <section>
     <div class="container  d-flex justify-content-between align-items-center">
       <div class="ms-md-5 mt-3 mb-3 ">
-        <img class="f-img ms-md-2 " src="https://i.postimg.cc/g0zVVTT4/Your-paragraph-text-removebg-preview-resize.png" alt="" style="width: 160px;">
+        <img class="f-img ms-md-2 " src="https://i.postimg.cc/XqygMRf3/Untitled-design-2-removebg-preview.png" alt="" style="width: 160px;">
       </div>
       <div class="me-md-5  d-flex justify-content-center align-items-center">
         <p>
@@ -91,7 +91,7 @@
 
 
   <section>
-    <div class="image_bg-1 d-flex flex-column justify-content-between">
+    <div class=" image_bg-1 d-flex flex-column justify-content-between">
       <div class="zero-one-container container mx-auto w-auto mt-4">
         <div class=" d-flex">
           <h1 class="zero-one ps-md-5">
@@ -104,7 +104,7 @@
         </div>
 
         <p class=" zero-one-text ps-md-5"
-          style=" font-family:  sans-serif; font-weight: 400; font-size:18px; margin-left: 70px; margin-top: -40px;">
+          style=" font-family:  sans-serif; font-weight: 400; font-size:18px; margin-left: 62px; margin-top: -40px;">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in ante viverra, rutrum erat rutrum,
           consectetur mi. Proin at maximus est. Nullam purus ex iaculis sed erat sed, blandit tincidunt quam. Cras
           scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis hendrerit ac, tristique ut quam.
@@ -112,7 +112,7 @@
         </p>
       </div>
 
-      <div class=" w-100" style="background-color: #414F6B; opacity: 90%;">
+      <div class="carousel-bg   w-100" style="background-color: #414F6B; opacity: 90%;">
         <div class="container">
           <div id="carousel" class=" carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators ">
@@ -126,22 +126,22 @@
             </div>
             <div class="carousel-inner pt-5 pb-5">
               <div class="carousel-item active text-center " data-bs-interval="10000">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
               </div>
               <div class="carousel-item text-center" data-bs-interval="2000">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
               </div>
               <div class="carousel-item text-center">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/63SCN551/istockphoto-1301431065-1024x1024-transformed.jpg" class="c-img " alt="...">
-                <img src="https://i.postimg.cc/2SfF66ds/images-14.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/x1HM0GNG/photo-1458442310124-dde6edb43d10.jpg" class="c-img " alt="...">
+                <img src="https://i.postimg.cc/k5JFM13r/photo-1443980995706-8d107e98e707.jpg" class="c-img " alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -231,7 +231,7 @@
       <div class="" style=" height: auto; background-color: #414F6B;">
         <div class="container d-flex align-items-center justify-content-between">
           <div class="ms-md-5 mt-2 mb-2">
-            <img src="https://i.postimg.cc/qvXcCTjz/Untitled-design-1-removebg-preview-resize.png" alt="" class="f-img" style="width: 160px;">
+            <img src="https://i.postimg.cc/4d01SfhB/Untitled-design-3-removebg-preview.png" alt="" class="f-img" style="width: 160px;">
           </div>
           <div class="me-md-5">
             <p class="copyright"
