--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
           </div>
         </div>
       </nav>
+
+
     </div>
+
   </section>
 
   <section>
     <div class="container  d-flex justify-content-between align-items-center">
       <div class="ms-md-5 mt-3 mb-3 ">
-        <img class="f-img ms-md-2 " src="https://i.postimg.cc/XqygMRf3/Untitled-design-2-removebg-preview.png" alt="" style="width: 160px;">
+        <img class="f-img ms-md-2 " src="https://i.postimg.cc/XqygMRf3/Untitled-design-2-removebg-preview.png" alt=""
+          style="width: 160px;">
       </div>
       <div class="me-md-5  d-flex justify-content-center align-items-center">
         <p>
@@ -231,7 +235,8 @@
       <div class="" style=" height: auto; background-color: #414F6B;">
         <div class="container d-flex align-items-center justify-content-between">
           <div class="ms-md-5 mt-2 mb-2">
-            <img src="https://i.postimg.cc/4d01SfhB/Untitled-design-3-removebg-preview.png" alt="" class="f-img" style="width: 160px;">
+            <img src="https://i.postimg.cc/4d01SfhB/Untitled-design-3-removebg-preview.png" alt="" class="f-img"
+              style="width: 160px;">
           </div>
           <div class="me-md-5">
             <p class="copyright"
