--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <nav class="navbar navbar-expand-md ">
         <div class="container ">
-          <a href="#" class="navbar-brand ms-md-5"><img style="width: 50px;"
+          <a href="#" class=" nav-logo navbar-brand ms-md-5"><img style="width: 50px;"
               src="https://i.postimg.cc/DyRwyt1H/Vector-Smart-Object.png" alt=""></a>
 
           <button class="navbar-toggler border-0 shadow-none" data-bs-toggle="collapse" data-bs-target="#nav"
